--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                </div>
                <div class="content">
                   <h1>Deen's Dutch Land Film</h1>
-                  <p>Let the dutch make a movie for you</p>
+                  <p>Lang leve de koning!</p>
                </div>
                <div class="double-image">
                   <img src="pictures/voorkant1.jpg" class="image1">
